Codes touch out for Java 8+ compatible