@@ -4,7 +4,7 @@ import openccjni.OpenCC;
 import picocli.CommandLine.Command;
 import picocli.CommandLine.Option;
 
-import java.io.File;
+import java.io.*;
 import java.nio.charset.Charset;
 import java.nio.file.Files;
 import java.util.logging.Level;
@@ -66,7 +66,10 @@ public class ConvertCommand implements Runnable {
             String inputText;
 
             if (input != null) {
-                inputText = Files.readString(input.toPath(), Charset.forName(inEncoding));
+//                inputText = Files.readString(input.toPath(), Charset.forName(inEncoding));
+                // Java 8: no Files.readString, use readAllBytes
+                byte[] bytes = Files.readAllBytes(input.toPath());
+                inputText = new String(bytes, Charset.forName(inEncoding));
             } else {
                 Charset inputCharset = Charset.forName(normEnc(inEncoding));
                 if (System.console() != null) {
@@ -79,13 +82,17 @@ public class ConvertCommand implements Runnable {
                     System.err.println("Input (Charset: " + inputCharset.name() + ")");
                     System.err.println(BLUE + "Input text to convert, <Ctrl+D> (Unix) <Ctrl-Z> (Windows) to submit:" + RESET);
                 }
-                inputText = new String(System.in.readAllBytes(), inputCharset);
+//                inputText = new String(System.in.readAllBytes(), inputCharset);
+                // Java 8: no InputStream.readAllBytes, use a helper
+                inputText = new String(readAllBytes(), inputCharset);
             }
 
             String outputText = opencc.convert(inputText, punct);
 
             if (output != null) {
-                Files.writeString(output.toPath(), outputText, Charset.forName(outEncoding));
+//                Files.writeString(output.toPath(), outputText, Charset.forName(outEncoding));
+                // Java 8: no Files.writeString, use Files.write
+                Files.write(output.toPath(), outputText.getBytes(Charset.forName(outEncoding)));
             } else {
                 Charset outputCharset = Charset.forName(normEnc(consoleEncoding));
                 System.err.println("Output (Charset: " + outputCharset.name() + ")");
@@ -120,5 +127,16 @@ public class ConvertCommand implements Runnable {
                 return n;
         }
     }
+
+    private static byte[] readAllBytes() throws IOException {
+        ByteArrayOutputStream buffer = new ByteArrayOutputStream();
+        byte[] tmp = new byte[8192];
+        int n;
+        while ((n = System.in.read(tmp)) != -1) {
+            buffer.write(tmp, 0, n);
+        }
+        return buffer.toByteArray();
+    }
+
 
 }
